--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
 <meta charset="utf-8">
 <script
 src="https://use.fontawesome.com/d1341f9b7a.js"></script>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="css/style.css">
 <title>Personal WebSite</title>
 <link
 href="https://fonts.googleapis.com/css2?family=Montserrat:wght
 @400;600&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div class="box">
 <img src="llovinghome.jpg" alt="" class="box-img">
-<h1>Harry Coder</h1>
+<h1>Bohdana Bondarchuk</h1>
 <h5>Web Devloper - Web Designer</h5>
 <p>
 A web developer is a programmer who specializes in, or
